# semanticworkbench

./: .gitignore  .gitmodules  CLAUDE.md  semantic-workbench.code-workspace
cortex/cortex-core/: .env.example  .gitignore  Dockerfile  MCP_IMPLEMENTATION_GUIDE.md  Makefile  README.md  SSE_ISSUE_ANALYSIS.md  SSE_TECHNICAL_REPORT.md  client.html  client.py  cortex.db  cortex_core.py  docker-compose.yml  launch_test_client.py  main.py  models.py  mypy.ini  notification_queue.py  pyproject.toml  requirements.txt  run_cognition_service.py  run_memory_service.py  setup.py  sse_listener.py  test_core.py  test_env.py  web-client.html
cortex/cortex-core/alembic/: env.py
cortex/cortex-core/app/: __init__.py  config.py  exceptions.py  main.py
cortex/cortex-core/app/api/: __init__.py  auth.py  cognition.py  config.py  conversations.py  health.py  input.py  integrations.py  management.py  output.py  sse.py  workspaces.py
cortex/cortex-core/app/backend/: __init__.py  cognition_client.py  memory_client.py
cortex/cortex-core/app/cache/: redis_client.py
cortex/cortex-core/app/components/: conversation_channels.py  cortex_router.py  (+5 more)
cortex/cortex-core/archive/: IMPLEMENTATION_GUIDE.md  api_server.py  check_imports.sh  sse_server.py
cortex/cortex-core/cognition_service/: __init__.py  config.py  logic.py  main.py  memory_client.py  models.py
cortex/cortex-core/cortex_core/: __init__.py  main.py
cortex/cortex-core/docs/: AI_ASSISTANT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  AUTH.md  AUTH_INTEGRATION.md  CLIENT_API_REFERENCE.md  CLIENT_DOCUMENTATION_INDEX.md  CLIENT_INTEGRATION.md  CLIENT_INTEGRATION_GUIDE.md  CLIENT_QUICKSTART.md  CODEBASE_STRUCTURE.md  COGNITION_SERVICE.md  COMPONENTS.md  CONFIGURATION.md  CORE_DATA_MODELS.md  CORE_POC_PLAN.md  DATABASE_SCHEMA.md  DEPLOYMENT_ENVIRONMENT.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  DEV_CODE_CLEANUP.md  DISTRIBUTED_MODE.md  DOCUMENTATION_CHANGES.md  DOCUMENTATION_INDEX.md  DOMAIN_EXPERTS.md  ERROR_HANDLING.md  EVENT_BUS.md  IMPLEMENTATION_CLEANUP_PLAN.md  IMPLEMENTATION_PHILOSOPHY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_HUB.md  LLM_ADAPTER_CLEANUP.md  LLM_INTEGRATION.md  MCP_INTEGRATION_USAGE.md  MCP_INTERNAL_GUIDE.md  MEMORY_SYSTEM.md  MOCK_LLM_CLEANUP.md  OVERVIEW.md  PHASE2_IMPLEMENTATION.md  (+17 more)
cortex/cortex-core/memory_data/: test-create-retrieve.json  test-delete.json  test-resource.json  test-update-existing.json
cortex/cortex-core/memory_service/: config.py  memory_store.py  memory_updater.py  models.py  server.py
cortex/cortex-core/planning/: 1.PROJECT_STRUCTURE_AND_INITIAL_SETUP.md  10.TESTING_AND_VALIDATION.md  2.DOMAIN_AND_API_DATA_MODELS.md  3.AUTHENTICATION_AND_AUTHORIZATION.md  4.API_ENDPOINTS.md  5.IN-MEMORY_EVENT_BUS.md  6.MCP_CLIENT_INTEGRATION_FOR_SERVICES.md  7.1.COGNITION_SERVICE.md  7.2.MEMORY_SERVICE.md  8.LLM_RESPONSE_ORCHESTRATOR.md  9.APPLICATION_INTEGRATION_AND_STARTUP.md  ARCHITECTURE_AND_DESIGN.md  INTEGRATION_IMPROVEMENTS.md  PROJECT_BREAKDOWN.md  SHARED_ARCHITECTURAL_CONTEXT.md
cortex/cortex-core/scripts/: check_architecture.sh  e2e_test.py  migrate_to_sqlite.py  reset_data.py  run_distributed.py
cortex/cortex-core/tests/: README.md  TEST_COVERAGE_PLAN.md  conftest.py  test_api.py  test_api_management.py  test_auth.py  test_error_handling.py  test_event_bus.py  test_integration.py  test_main.py  test_models.py
(+724 files in other folders)
