[project]
name = "cortex-core"
version = "0.1.0"
description = "Central engine for the Cortex Platform"
authors = [{ name = "Cortex Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11",
    "litellm>=1.63.11",
    "mcp[cli]>=1.4.1",
    "pydantic>=2.10.6",
    "pydantic-ai-slim[anthropic,mcp,openai]>=0.0.43",
    "pydantic-settings>=2.3.0",
    "pyjwt>=2.10.1",
    "pytest-cov>=6.0.0",
    "python-dotenv>=1.0.1",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "alembic>=1.15.1",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "ruff>=0.11.0",
    "types-python-jose>=3.4.0.20250224",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Set default fixture loop scope to function to address pytest-asyncio warning
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
]
